-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: client-libs
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264643 | 15.0.4 | Vladimir Kempik | P3 | Resolved | Fixed | b01 |
| JDK-8264909 | 13.0.8 | Vladimir Kempik | P3 | Resolved | Fixed | b01 |
| JDK-8261695 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8267489 | 11.0.12 | Vladimir Kempik | P3 | Resolved | Fixed | b04 |
https://bugs.openjdk.java.net/browse/JDK-8257853 to
1) Add more calls to CHECK_EXCEPTION
2) Add more logging when there is a JNI lookup problem or an exception from a JNI method call
3) In case of such errors throw an NSException to cause prompt reporting of the errors
- backported by
-
JDK-8261695 [macOS] Update JNI error handling in Cocoa code.
-
- Resolved
-
-
JDK-8264643 [macOS] Update JNI error handling in Cocoa code.
-
- Resolved
-
-
JDK-8264909 [macOS] Update JNI error handling in Cocoa code.
-
- Resolved
-
-
JDK-8267489 [macOS] Update JNI error handling in Cocoa code.
-
- Resolved
-
- relates to
-
JDK-8257853 Remove dependencies on JNF's JNI utility functions in AWT and 2D code
-
- Resolved
-
-
JDK-8257852 ☂ : Remove JNF dependencies from java.desktop module
-
- Closed
-
- links to
-
Commit
openjdk/jdk13u-dev/cdb993e9
-
Commit
openjdk/jdk15u-dev/e688dae9
-
Commit
openjdk/jdk/d6a2105b
-
Review
openjdk/jdk13u-dev/175
-
Review
openjdk/jdk15u-dev/10
-
Review
openjdk/jdk/1967