8259343: [macOS] Update JNI error handling in Cocoa code.